--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-h5py==2.7.1      
-Keras==2.1.6      
-numpy==1.22.0        
-scikit-learn==0.19.1     
-scipy==1.1.0      
-six==1.11.0     
-tensorflow>=1.15.4
-textgenrnn==1.3.0      
+h5py
+Keras
+numpy
+scikit-learn
+scipy
+six
+tensorflow
+textgenrnn
